styles/style.css
body {
    background-color: #f0eae5;
    color: #8d6548;
    height: 100vh;
}

.header {
    display: flex;
    justify-content: center;
    background-color: #f0eae5;
    align-items: center;
    padding: 20px 0;
    margin: 0 auto;
}

.header-image {
    max-width: 100%;
    height: auto;
    width: 300px;
}

.main-container {
    text-align: center;
}

h1 {
    font-family: "Cormorant Garamond", serif;
    font-weight: 400;
}

h2 {
    font-family: "Cormorant Garamond", serif;
    font-weight: 400;
}

.form-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 15px;
}

input.login, input.register, input.search-bar, input.add-book {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-bottom: 10px;
    border: 1px solid #8d6548;
}

input {
    border-color: 1px solid #8d6548;
    opacity: 0.7;
}

label {
    margin-top: 15px;
    font-family: "Cormorant Garamond", serif;
    font-weight: 700;
}

th {
    font-family: "Cormorant Garamond", serif;
    font-weight: 700;
}

#register-button {
    padding: 5px 12px;
}

#login-button {
    padding: 5px 12px;
}

#search-button {
    padding: 10px;
}

#delete-button {
    padding: 5px 12px;
}

.search-bar {
    border: 1px solid #8d6548;
}

.button-container {
    display: flex;
    gap: 10px;
    justify-content: center;
    margin-top: 20px;
}

button {
    border-color: #8d6548;
    background-color: #f0eae5;
    color: #8d6548;
    padding: 15px 32px;
    cursor: pointer;
    border: 1px solid;
    border-radius: 5px;
}

nav {
    position: fixed;
    top: 20px;
    right: 20px;
    z-index: 1000;
}

nav ul {
    margin: 0;
    padding: 0;
    display: flex;
    gap: 15px;
}

ul {
    list-style-type: none;
}

a:link {
    text-decoration: none;
    color: #8d6548;
}

a:hover {
    cursor: pointer;
}

a:visited {
    color: #8d6548;
    text-decoration: none;
}

td {
    padding: 20px;
}

.search-results {
    width: 80%;
    margin: 20px auto;
}

.search-results td {
    text-align: center;
    vertical-align: middle;
}

.tracked-book-form {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5px;
}

.tracked-book-form .form-group {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 5px;
    padding-right: 5px;
}

.tracked-book-form label {
    margin-bottom: 5px;
}

.tracked-submit {
    display: block;
    margin-top: 10px;
}

.add-book {
    display: flex;
    flex-direction: column; 
    gap: 5px; 
    margin-bottom: 5px;
}

.center {
    display: block;
    text-align: center; 
}

select {
    border: 1px solid #8d6548;
    opacity: 0.7;
}

button:hover {
    background-color: #567156;
    color:#f0eae5;
}

a:hover {
    color: #567156;
}

.footer {
    text-align: center;
    justify-content: center;
    padding-top: 50px;
    padding-bottom: 10px;
    font-size: 0.5em;
}

.color {
    font-family: "Yesteryear", cursive;
    font-weight: 400;
    color:#567156;
    font-size: 50px;
    margin-top: 5px;
    margin-bottom: 5px;
    opacity: 0.9;
}

hr {
    color:#8d6548;
    opacity: .25;
    width: 50%;
    margin-top: 50px;
}

#icon-button {
    border: none;
    font-size: 1.5em;
    color:#8d6548;
}

#icon-button:hover {
    background-color: #f0eae5;
    color:#567156;
}

